force-app/main/default/objects/EYI_Booking__c/EYI_Booking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <nameField>
        <displayFormat>BF-{0000000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>