force-app/main/default/objects/EYI_Booking__c/fields/Additional_Tax_to_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Additional_Tax_to_Cancellation__c</fullName>
    <label>Additional Tax to Cancellation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>