force-app/main/default/objects/EYI_Booking__c/fields/Amount_of_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Credit_Memo__c</fullName>
    <label>Amount of Credit Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>