force-app/main/default/objects/EYI_Booking__c/fields/Bank_GL_Code_Number_Tax_Acc__c.field-meta.xml
<CustomField>
    <fullName>Bank_GL_Code_Number_Tax_Acc__c</fullName>
    <formula>Bank_GL_Codes_Tax_Acc__r.EYI_GL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank GL Code Number Tax Acc</label>
    <type>Text</type>
</CustomField>