force-app/main/default/objects/EYI_Booking__c/fields/Bank_GL_Codes_Tax_Acc__c.field-meta.xml
<CustomField>
    <fullName>Bank_GL_Codes_Tax_Acc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank GL Codes Tax Acc</label>
    <referenceTo>EYI_Bank_GL_Codes__c</referenceTo>
    <relationshipLabel>Bank GL Codes Tax Accounts</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>