force-app/main/default/objects/EYI_Booking__c/fields/Booking_Checklist_Acceptance_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Checklist_Acceptance_Time__c</fullName>
    <label>Booking Checklist Acceptance Time</label>
    <type>DateTime</type>
</CustomField>