force-app/main/default/objects/EYI_Booking__c/fields/Booking_Cheque_or_DD_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Cheque_or_DD_Number__c</fullName>
    <label>Booking Cheque or DD Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>