force-app/main/default/objects/EYI_Booking__c/fields/Booking_Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Transaction_Number__c</fullName>
    <label>Booking Transaction Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>