force-app/main/default/objects/EYI_Booking__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <label>Carpet Area</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>