force-app/main/default/objects/EYI_Booking__c/fields/Channel_Partner_Correspondence_Contact_P__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Correspondence_Contact_P__c</fullName>
    <label>Channel Partner Correspondence Contact P</label>
    <length>255</length>
    <type>Text</type>
</CustomField>