force-app/main/default/objects/EYI_Booking__c/fields/CP_Executive_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>CP_Executive_Mobile_Number__c</fullName>
    <label>CP Executive Mobile Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>