force-app/main/default/objects/EYI_Booking__c/fields/CP_Executive_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Executive_Name__c</fullName>
    <label>CP Executive Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>