force-app/main/default/objects/EYI_Booking__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings6</relationshipName>
    <type>Lookup</type>
</CustomField>