force-app/main/default/objects/EYI_Booking__c/fields/Director_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Director_Escalation_Date__c</fullName>
    <label>Director Escalation Date</label>
    <type>Date</type>
</CustomField>