force-app/main/default/objects/EYI_Booking__c/fields/EYI_1Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_1Agreement_Value__c</fullName>
    <formula>EYI_Quote__r.EYI_Agreement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>