force-app/main/default/objects/EYI_Booking__c/fields/EYI_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_Account_Email__c</fullName>
    <formula>EYI_Account_Name__r.EYI_Email__c</formula>
    <label>Account Email</label>
    <type>Text</type>
</CustomField>