force-app/main/default/objects/EYI_Booking__c/fields/EYI_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>