force-app/main/default/objects/EYI_Booking__c/fields/EYI_Account_number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Account_number__c</fullName>
    <label>Account number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>