force-app/main/default/objects/EYI_Booking__c/fields/EYI_Actual_Area_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Actual_Area_Value__c</fullName>
    <formula>EYI_Unit_No__r.EYI_Actual_Area_value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Area Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>