force-app/main/default/objects/EYI_Booking__c/fields/EYI_Advance_Amount_Refunded__c.field-meta.xml
<CustomField>
    <fullName>EYI_Advance_Amount_Refunded__c</fullName>
    <label>Advance Amount Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>