force-app/main/default/objects/EYI_Booking__c/fields/EYI_Advance_Payment_Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Advance_Payment_Refund_Date__c</fullName>
    <label>Advance Payment Refund Date</label>
    <type>Date</type>
</CustomField>