force-app/main/default/objects/EYI_Booking__c/fields/EYI_Aggrement_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Aggrement_Received_Date__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Aggrement Received Date</label>
    <type>Date</type>
</CustomField>