force-app/main/default/objects/EYI_Booking__c/fields/EYI_Aggrement_Reg_no__c.field-meta.xml
<CustomField>
    <fullName>EYI_Aggrement_Reg_no__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Aggrement Reg no</label>
    <length>40</length>
    <type>Text</type>
</CustomField>