force-app/main/default/objects/EYI_Booking__c/fields/EYI_Agreement_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_Execution_Date__c</fullName>
    <description>Field created for SAP bookings sync API</description>
    <label>Agreement Execution Date</label>
    <type>Date</type>
</CustomField>