force-app/main/default/objects/EYI_Booking__c/fields/EYI_Agreement_loan_percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_loan_percentage__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Agreement loan percentage</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>