force-app/main/default/objects/EYI_Booking__c/fields/EYI_Agreement_Possession_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_Possession_Date__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Agreement Possession Date</label>
    <type>Date</type>
</CustomField>