force-app/main/default/objects/EYI_Booking__c/fields/EYI_Agreement_received_date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_received_date__c</fullName>
    <description>Field created for SAP sync API to store date at which agreement has been received</description>
    <label>Agreement received date</label>
    <type>Date</type>
</CustomField>