force-app/main/default/objects/EYI_Booking__c/fields/EYI_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agreement_Value__c</fullName>
    <label>Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>