force-app/main/default/objects/EYI_Booking__c/fields/EYI_AmtDetail_Booking_Amt_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>EYI_AmtDetail_Booking_Amt_Payment_Mode__c</fullName>
    <label>Booking Amount Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Demand Draft</fullName>
            </value>
            <value>
                <fullName>IMPS</fullName>
            </value>
            <value>
                <fullName>NEFT</fullName>
            </value>
            <value>
                <fullName>Swipe</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>