force-app/main/default/objects/EYI_Booking__c/fields/EYI_AutomationBypassDatetime__c.field-meta.xml
<CustomField>
    <fullName>EYI_AutomationBypassDatetime__c</fullName>
    <label>AutomationBypassDatetime</label>
    <type>DateTime</type>
</CustomField>