force-app/main/default/objects/EYI_Booking__c/fields/EYI_Bank_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_GL_Code__c</fullName>
    <formula>EYI_Select_Bank_GL_Code__r.EYI_GL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank GL Code</label>
    <type>Text</type>
</CustomField>