force-app/main/default/objects/EYI_Booking__c/fields/EYI_Banking_Remarks_for_VA01__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banking_Remarks_for_VA01__c</fullName>
    <description>Banking Remarks for VA01/VA02</description>
    <label>Banking Remarks for VA01</label>
    <length>40</length>
    <type>Text</type>
</CustomField>