force-app/main/default/objects/EYI_Booking__c/fields/EYI_Beneficiary_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_Beneficiary_Account__c</fullName>
    <label>Beneficiary Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>