force-app/main/default/objects/EYI_Booking__c/fields/EYI_Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Beneficiary_Name__c</fullName>
    <label>Customer Bank Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>