force-app/main/default/objects/EYI_Booking__c/fields/EYI_Booking_amount_payment_date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_amount_payment_date__c</fullName>
    <label>Booking amount payment date</label>
    <type>Date</type>
</CustomField>