force-app/main/default/objects/EYI_Booking__c/fields/EYI_Booking_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_Amount_Received__c</fullName>
    <label>Booking Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>