force-app/main/default/objects/EYI_Booking__c/fields/EYI_Booking_Classification__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_Classification__c</fullName>
    <label>Booking Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh Sale</fullName>
                <default>true</default>
                <label>Fresh Sale</label>
            </value>
            <value>
                <fullName>Transfer Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>