force-app/main/default/objects/EYI_Booking__c/fields/EYI_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_Date__c</fullName>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>