force-app/main/default/objects/EYI_Booking__c/fields/EYI_Booking_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_Form_Status__c</fullName>
    <label>Booking Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking in process</fullName>
            </value>
            <value>
                <fullName>Awaiting Site Head approval</fullName>
            </value>
            <value>
                <fullName>Rejected by Site Head</fullName>
            </value>
            <value>
                <fullName>Booking confirmed</fullName>
                <default>true</default>
                <label>Booking confirmed</label>
            </value>
            <value>
                <fullName>Approved by Site Head</fullName>
            </value>
            <value>
                <fullName>Approved by Onboarding Team</fullName>
            </value>
            <value>
                <fullName>Advance payment Done</fullName>
            </value>
            <value>
                <fullName>Advance Payment Confirmed</fullName>
            </value>
            <value>
                <fullName>Advance Payment Failed</fullName>
            </value>
            <value>
                <fullName>Advance Payment Refunded</fullName>
            </value>
            <value>
                <fullName>Refund Failed</fullName>
            </value>
            <value>
                <fullName>Advance Payment cancelled</fullName>
            </value>
            <value>
                <fullName>Advance Payment cancelled - Refund Pending</fullName>
            </value>
            <value>
                <fullName>Advance Payment Refund Initiated</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled</fullName>
            </value>
            <value>
                <fullName>Welcome call initiated</fullName>
            </value>
            <value>
                <fullName>Welcome checklist accepted</fullName>
            </value>
            <value>
                <fullName>Welcome checklist Rejected</fullName>
            </value>
            <value>
                <fullName>Booking Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>