force-app/main/default/objects/EYI_Booking__c/fields/EYI_Booking_on_hold_reason__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_on_hold_reason__c</fullName>
    <label>Booking on hold reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KYC pending</fullName>
            </value>
            <value>
                <fullName>Customer requested to hold</fullName>
            </value>
            <value>
                <fullName>Site head requested to Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>