force-app/main/default/objects/EYI_Booking__c/fields/EYI_Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_Source__c</fullName>
    <label>Booking Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>