force-app/main/default/objects/EYI_Booking__c/fields/EYI_Booking_Source_if_Other__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_Source_if_Other__c</fullName>
    <label>Booking Source (if Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>