force-app/main/default/objects/EYI_Booking__c/fields/EYI_Booking_sub_source__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_sub_source__c</fullName>
    <label>Booking sub-source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>