force-app/main/default/objects/EYI_Booking__c/fields/EYI_Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOI booking</fullName>
            </value>
            <value>
                <fullName>Spot booking</fullName>
            </value>
            <value>
                <fullName>Direct Booking</fullName>
            </value>
            <value>
                <fullName>Confirmed allocation booking</fullName>
                <isActive>false</isActive>
                <label>Confirmed allocation booking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>