force-app/main/default/objects/EYI_Booking__c/fields/EYI_BP_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_BP_Type__c</fullName>
    <label>BP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>