force-app/main/default/objects/EYI_Booking__c/fields/EYI_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Brokerage__c</fullName>
    <label>Brokerage %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>