force-app/main/default/objects/EYI_Booking__c/fields/EYI_Cancellation_initiated_By__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancellation_initiated_By__c</fullName>
    <description>Field created for bookings sync API</description>
    <label>Cancellation initiated By</label>
    <length>10</length>
    <type>Text</type>
</CustomField>