force-app/main/default/objects/EYI_Booking__c/fields/EYI_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor quality</fullName>
            </value>
            <value>
                <fullName>Sales call</fullName>
            </value>
            <value>
                <fullName>Damaged in transit</fullName>
            </value>
            <value>
                <fullName>Booking Form not Approved on Time</fullName>
            </value>
            <value>
                <fullName>Customer Requested</fullName>
            </value>
            <value>
                <fullName>Due to Non Payment</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>MISMATCH OF PAYMENT SCHEDULE</fullName>
            </value>
            <value>
                <fullName>Applicant to Co-applicant Transfer</fullName>
            </value>
            <value>
                <fullName>Unit Transfer</fullName>
            </value>
            <value>
                <fullName>Assigned by the System (Internal)</fullName>
                <isActive>false</isActive>
                <label>Assigned by the System (Internal)</label>
            </value>
            <value>
                <fullName>Bill of services completed</fullName>
                <isActive>false</isActive>
                <label>Bill of services completed</label>
            </value>
            <value>
                <fullName>Competitor better</fullName>
                <isActive>false</isActive>
                <label>Competitor better</label>
            </value>
            <value>
                <fullName>Copied and Rejected</fullName>
                <isActive>false</isActive>
                <label>Copied and Rejected</label>
            </value>
            <value>
                <fullName>Copy Failure: New SA Rejected</fullName>
                <isActive>false</isActive>
                <label>Copy Failure: New SA Rejected</label>
            </value>
            <value>
                <fullName>Cust.to receive replacement</fullName>
                <isActive>false</isActive>
                <label>Cust.to receive replacement</label>
            </value>
            <value>
                <fullName>DRM Claim Canellation/Rejection</fullName>
                <isActive>false</isActive>
                <label>DRM Claim Canellation/Rejection</label>
            </value>
            <value>
                <fullName>Delivery date too late</fullName>
                <isActive>false</isActive>
                <label>Delivery date too late</label>
            </value>
            <value>
                <fullName>Guarantee</fullName>
                <isActive>false</isActive>
                <label>Guarantee</label>
            </value>
            <value>
                <fullName>Rejected by Selling Company</fullName>
                <isActive>false</isActive>
                <label>Rejected by Selling Company</label>
            </value>
            <value>
                <fullName>SMP-Declined</fullName>
                <isActive>false</isActive>
                <label>SMP-Declined</label>
            </value>
            <value>
                <fullName>SMP-Flagged (Deleted during Release)</fullName>
                <isActive>false</isActive>
                <label>SMP-Flagged (Deleted during Release)</label>
            </value>
            <value>
                <fullName>SMP-Notification</fullName>
                <isActive>false</isActive>
                <label>SMP-Notification</label>
            </value>
            <value>
                <fullName>SMP-Suspended</fullName>
                <isActive>false</isActive>
                <label>SMP-Suspended</label>
            </value>
            <value>
                <fullName>Too expensive</fullName>
                <isActive>false</isActive>
                <label>Too expensive</label>
            </value>
            <value>
                <fullName>Transaction is being checked</fullName>
                <isActive>false</isActive>
                <label>Transaction is being checked</label>
            </value>
            <value>
                <fullName>Unreasonable request</fullName>
                <isActive>false</isActive>
                <label>Unreasonable request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>