force-app/main/default/objects/EYI_Booking__c/fields/EYI_Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancellation_Type__c</fullName>
    <label>Cancellation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation Completed</fullName>
            </value>
            <value>
                <fullName>Cancellation Requests Received</fullName>
            </value>
            <value>
                <fullName>Customers Retained</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>