force-app/main/default/objects/EYI_Booking__c/fields/EYI_Channel_Partner_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Channel_Partner_Firm_Name__c</fullName>
    <label>Channel Partner Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>