force-app/main/default/objects/EYI_Booking__c/fields/EYI_Channel_Partner_MahaRERA_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Channel_Partner_MahaRERA_No__c</fullName>
    <label>Channel Partner MahaRERA No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>