force-app/main/default/objects/EYI_Booking__c/fields/EYI_Co_Applicant__c.field-meta.xml
<CustomField>
    <fullName>EYI_Co_Applicant__c</fullName>
    <label>Co-Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>