force-app/main/default/objects/EYI_Booking__c/fields/EYI_Condition_Group_1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Condition_Group_1__c</fullName>
    <label>Municipal Limits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMC</fullName>
            </value>
            <value>
                <fullName>PCMC</fullName>
            </value>
            <value>
                <fullName>PMRDA</fullName>
            </value>
            <value>
                <fullName>Township</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>