force-app/main/default/objects/EYI_Booking__c/fields/EYI_Condition_Group_2__c.field-meta.xml
<CustomField>
    <fullName>EYI_Condition_Group_2__c</fullName>
    <defaultValue>&apos;Standard&apos;</defaultValue>
    <label>Condition Group 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only female appl.</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>