force-app/main/default/objects/EYI_Booking__c/fields/EYI_Configuration__c.field-meta.xml
<CustomField>
    <fullName>EYI_Configuration__c</fullName>
    <label>Configuration</label>
    <length>30</length>
    <type>Text</type>
</CustomField>