force-app/main/default/objects/EYI_Booking__c/fields/EYI_Confirmed_alllocation_amt_received__c.field-meta.xml
<CustomField>
    <fullName>EYI_Confirmed_alllocation_amt_received__c</fullName>
    <label>Confirmed alllocation amount received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>