force-app/main/default/objects/EYI_Booking__c/fields/EYI_Confirmed_Allocation_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Confirmed_Allocation_Date__c</fullName>
    <label>EOI Block Date</label>
    <type>Date</type>
</CustomField>