force-app/main/default/objects/EYI_Booking__c/fields/EYI_CP_Correspondence_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>EYI_CP_Correspondence_Email_ID__c</fullName>
    <label>CP Correspondence Email ID</label>
    <type>Email</type>
</CustomField>