force-app/main/default/objects/EYI_Booking__c/fields/EYI_CP_Correspondence_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_CP_Correspondence_Mobile_Number__c</fullName>
    <label>CP Correspondence Mobile Number</label>
    <type>Phone</type>
</CustomField>